<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>kadai-adapter-camunda-listener-example</artifactId>
  <packaging>war</packaging>

  <name>${project.groupId}:${project.artifactId}</name>

  <description>A Process Application for [Camunda BPM](https://docs.camunda.org).</description>

  <parent>
    <groupId>io.kadai</groupId>
    <artifactId>kadai-adapter-camunda7-parent</artifactId>
    <version>11.3.3-SNAPSHOT</version>
  </parent>

  <properties>
    <failOnMissingWebXml>false</failOnMissingWebXml>
    <!-- Java delegates from this module are copied into the Camunda BPM Run
         container userlib. The 7.23 Run image currently runs on Java 17. -->
    <maven.compiler.release>17</maven.compiler.release>
    <version.camunda>7.19.0</version.camunda>
  </properties>

  <dependencies>
    <dependency>
      <groupId>jakarta.ws.rs</groupId>
      <artifactId>jakarta.ws.rs-api</artifactId>
      <version>${version.jakarta-ws-rs-api}</version>
    </dependency>
    <!-- Jersey 2.19 -->
    <dependency>
      <!-- process engine, needs to be 'provided' because it's already a shared library in the container -->
      <groupId>org.camunda.bpm</groupId>
      <artifactId>camunda-engine</artifactId>
      <scope>provided</scope>
    </dependency>
    <!-- Required to use Spin dataformat support in unit tests -->
    <dependency>
      <groupId>org.camunda.spin</groupId>
      <artifactId>camunda-spin-dataformat-all</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.camunda.bpm</groupId>
      <artifactId>camunda-engine-plugin-spin</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Required to use Templates in unit tests -->
    <dependency>
      <groupId>org.camunda.template-engines</groupId>
      <artifactId>camunda-template-engines-freemarker</artifactId>
      <version>${version.camunda.template-engines-freemarker}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.camunda.template-engines</groupId>
      <artifactId>camunda-template-engines-velocity</artifactId>
      <version>${version.camunda.template-engines-velocity}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- Bootstrap for styling via Webjars project -->
      <groupId>org.webjars</groupId>
      <artifactId>bootstrap</artifactId>
      <version>${version.org.webjars.bootstrap}</version>
    </dependency>
    <dependency>
      <!-- Needed for InMemoryH2Test -->
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${version.maven.surefire.plugin}</version>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${version.maven.jar}</version>
        <executions>
          <execution>
            <id>early-classes-jar-for-camunda-userlib</id>
            <phase>process-classes</phase>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <classifier>classes</classifier>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>${version.maven-war-plugin}</version>
        <configuration>
          <attachClasses>true</attachClasses>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
      <plugin>
        <!-- Deploy to JBoss AS7: mvn clean jboss-as:deploy See also: https://docs.jboss.org/jbossas/7/plugins/maven/latest/examples/deployment-example.html -->
        <groupId>org.jboss.as.plugins</groupId>
        <artifactId>jboss-as-maven-plugin</artifactId>
        <version>${version.maven.jboss-as.plugin}</version>
      </plugin>
    </plugins>
  </build>
</project>
